Make html and css for Front Page

--- a/src/front-page.html
+++ b/src/front-page.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Activity Tracker</title>
+    <link rel = "stylesheet"
+   type = "text/css"
+   href = "front-page.css" />
   </head>
   <body>
-    <h1>Activity Tracker</h1>
+    <header id="front-page-header">
+      <h1>FitLit</h1>
+    </header>
+    <form id="front-page-form">
+      <input id="front-page-name" type="text" placeholder="Enter Name..."><br>
+      <button id="front-page-btn" type="button">Enter</button>
+    </form>
+    <footer id="front-page-footer">
+      <h2>Your Journey to Health</h2>
+    </footer>
 
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
