Fine tune styling for intro page

--- a/src/front-page.html
+++ b/src/front-page.html
@@ -6,6 +6,8 @@
     <link rel = "stylesheet"
    type = "text/css"
    href = "front-page.css" />
+   <link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header id="front-page-header">
