--- a/src/front-page.html
+++ b/src/front-page.html
@@ -6,7 +6,7 @@
     <link rel = "stylesheet"
    type = "text/css"
    href = "front-page.css" />
-   <link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Roboto+Condensed:300&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -14,7 +14,7 @@
       <h1>FitLit</h1>
     </header>
     <form id="front-page-form">
-      <input id="front-page-name" type="text" placeholder="Enter Name..."><br>
+      <input id="front-page-name" type="text" placeholder="Enter User ID..."><br>
       <button id="front-page-btn" type="button">Enter</button>
     </form>
     <footer id="front-page-footer">
