Add nav menu toggle

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -17,7 +17,7 @@
       <h2>FitLit</h2>
     </header>
     <main>
-      <nav>
+      <nav class="hidden">
         <ul>
           <li id="user-id">UserID: ?</li>
           <li id="user-name">Name: ?</li>
