Begin card-flip functionality

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -31,7 +31,14 @@
       </nav>
       <section class="main-dashboard">
         <article class="info-card">
-          <img class="dashboard-photo" src="../images/water-droplet.png" alt="Teardrop to signify hydration information">
+          <div class="info-card-inner">
+            <div class="info-card-front">
+              <img class="dashboard-photo" src="../images/water-droplet.png" alt="Teardrop to signify hydration information">
+            </div>
+            <div class="info-card-back">
+              <p class="user-info">USER HYDRATION INFO</p>
+            </div>
+          </div>
         </article>
         <article class="info-card">
           <img class="dashboard-photo" src="../images/timer.png" alt="Clock to signify minutes active">
