Improve card flip functionality

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -30,6 +30,7 @@
         </ul>
       </nav>
       <section class="main-dashboard">
+        <input type="checkbox"  />
         <article class="info-card">
           <div class="info-card-inner">
             <div class="info-card-front">
