--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -38,6 +38,10 @@
             </div>
             <div class="info-card-back">
               <p class="user-info">USER HYDRATION INFO</p>
+              <ul>
+                <li id="user-hydration-today">Stuff Here</li>
+                <li id="user-hydration-week">More Stuff Here</li>
+              </ul>
             </div>
           </div>
         </article>
@@ -74,6 +78,7 @@
   <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="User.js"></script>
   <script type="text/javascript" src="UserRepository.js"></script>
+  <script type="text/javascript" src="Hydration.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
   <script type="text/javascript" src="../data/hydration.js"></script>
   <script type="text/javascript" src="../data/sleep.js"></script>
