Add data manipulation

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -53,7 +53,7 @@
               <p>USER MINUTES ACTIVE INFO</p>
               <ul>
                 <li id="user-minutes-today">Stuff Here</li>
-                <li id="user-minutes-compare">More Stuff Here</li>
+                <li id="user-minutes-week">More Stuff Here</li>
               </ul>
             </div>
           </div>
@@ -82,10 +82,10 @@
               <img class="dashboard-photo" src="../images/stairs.png" alt="Stairs photo to signify flights of stairs climbed">
             </div>
             <div class="info-card-back">
-              <p>USER HYDRATION INFO</p>
+              <p>USER CLIMB INFO</p>
               <ul>
-                <li id="user-hydration-today">Stuff Here</li>
-                <li id="user-hydration-week">More Stuff Here</li>
+                <li id="user-stairs-today">Stuff Here</li>
+                <li id="user-stairs-week">More Stuff Here</li>
               </ul>
             </div>
           </div>
@@ -96,10 +96,11 @@
               <img class="dashboard-photo" src="../images/shoe-icon.png" alt="Foot picture to signify step goal information">
             </div>
             <div class="info-card-back">
-              <p>USER HYDRATION INFO</p>
+              <p>USER STEP INFO</p>
               <ul>
-                <li id="user-hydration-today">Stuff Here</li>
-                <li id="user-hydration-week">More Stuff Here</li>
+                <li id="user-steps-today">Stuff Here</li>
+                <li id="user-steps-compare">Stuff Here</li>
+                <li id="user-steps-weekly">More Stuff Here</li>
               </ul>
             </div>
           </div>
@@ -114,6 +115,8 @@
   <script type="text/javascript" src="SleepQuality.js"></script>
   <script type="text/javascript" src="SleepQuantity.js"></script>
   <script type="text/javascript" src="Minutes.js"></script>
+  <script type="text/javascript" src="Steps.js"></script>
+  <script type="text/javascript" src="Climb.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
   <script type="text/javascript" src="../data/hydration.js"></script>
   <script type="text/javascript" src="../data/sleep.js"></script>
