Add card flip functionality

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -31,39 +31,28 @@
       </nav>
       <section class="main-dashboard">
         <article class="info-card">
-          <div class="info-card-inner">
+              <img class="dashboard-photo info-card-back" src="../images/water-droplet.png" alt="Teardrop to signify hydration information">
             <div class="info-card-front">
-              <img class="dashboard-photo" src="../images/water-droplet.png" alt="Teardrop to signify hydration information">
-            </div>
-            <div class="info-card-back">
               <p>USER HYDRATION INFO</p>
               <ul>
                 <li id="user-hydration-today">Stuff Here</li>
                 <li id="user-hydration-week">More Stuff Here</li>
               </ul>
             </div>
-          </div>
         </article>
         <article class="info-card">
-          <div class="info-card-inner">
+              <img class="dashboard-photo info-card-back" src="../images/timer.png" alt="Timer to signify minutes active information">
             <div class="info-card-front">
-              <img class="dashboard-photo" src="../images/timer.png" alt="Timer to signify minutes active information">
-            </div>
-            <div class="info-card-back">
               <p>USER MINUTES ACTIVE INFO</p>
               <ul>
                 <li id="user-minutes-today">Stuff Here</li>
                 <li id="user-minutes-week">More Stuff Here</li>
               </ul>
             </div>
-          </div>
         </article>
         <article class="info-card">
-          <div class="info-card-inner">
+              <img class="dashboard-photo info-card-back" src="../images/sleep.png" alt="Sleep Z's to signify sleep information">
             <div class="info-card-front">
-              <img class="dashboard-photo" src="../images/sleep.png" alt="Sleep Z's to signify sleep information">
-            </div>
-            <div class="info-card-back">
               <p>USER SLEEP INFO</p>
               <ul>
                 <li id="user-sleep-quality-today">Stuff Here</li>
@@ -74,28 +63,21 @@
                 <li id="user-sleep-quantity-average">More Stuff Here</li>
               </ul>
             </div>
-          </div>
         </article>
         <article class="info-card">
-          <div class="info-card-inner">
+              <img class="dashboard-photo info-card-back" src="../images/stairs.png" alt="Stairs photo to signify flights of stairs climbed">
             <div class="info-card-front">
-              <img class="dashboard-photo" src="../images/stairs.png" alt="Stairs photo to signify flights of stairs climbed">
-            </div>
-            <div class="info-card-back">
               <p>USER CLIMB INFO</p>
               <ul>
                 <li id="user-stairs-today">Stuff Here</li>
                 <li id="user-stairs-week">More Stuff Here</li>
               </ul>
             </div>
-          </div>
         </article>
         <article class="info-card">
-          <div class="info-card-inner">
-            <div class="info-card-front">
-              <img class="dashboard-photo" src="../images/shoe-icon.png" alt="Foot picture to signify step goal information">
+              <img class="dashboard-photo info-card-back" src="../images/shoe-icon.png" alt="Foot picture to signify step goal information">
             </div>
-            <div class="info-card-back">
+            <div class="info-card-front">
               <p>USER STEP INFO</p>
               <ul>
                 <li id="user-steps-today">Stuff Here</li>
@@ -103,7 +85,6 @@
                 <li id="user-steps-weekly">More Stuff Here</li>
               </ul>
             </div>
-          </div>
         </article>
       </section>
     </main>
