Combine html pages

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!-- <!DOCTYPE html>
+<html id="dashboard" class="hidden">
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="dashboard-styles.css">
@@ -19,7 +19,7 @@
     <div class="header-line1"></div>
       <div class="header-line2"></div>
     <main>
-      <nav class="hidden">
+      <nav class="hidden2">
         <ul>
           <li id="user-id">UserID: ?</li>
           <li id="user-name">Name: ?</li>
@@ -105,4 +105,4 @@
   <script type="text/javascript" src="../data/sleep.js"></script>
   <script type="text/javascript" src="../data/activity.js"></script>
   <script type="text/javascript" src="main.js"></script>
-</html>
+</html> -->
